<resources>
    <string name="app_name">Democraciv</string>
    <string name="version">1.5.1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_bguide">Beginner\'s Guide</string>
    <string name="drawer_socialmedia">Social Media</string>
    <string name="drawer_reddit">Reddit</string>
    <string name="drawer_discord">Discord</string>
    <string name="drawer_youtube">YouTube</string>
    <string name="drawer_twitch">Twitch</string>
    <string name="drawer_government">Government</string>
    <string name="drawer_legislature">Legislature</string>
    <string name="drawer_courts">Courts</string>
    <string name="drawer_elections">Elections</string>
    <string name="drawer_bank">Bank</string>
    <string name="menu_settings">Settings</string>
    <string name="drawer_title">Democraciv</string>
    <string name="drawer_desc">Democratic Civilization</string>
    <string name="drawer_const">Constitution</string>
    <string name="drawer_casino">Casino</string>
    <string name="stock_market">Stock Market</string>
    <string name="gdpr_no_consent">You decided not to give consent.</string>
    <string name="gpdr_function">This app requires the Firebase services to function. As you decided not to give us consent to process the data that is required from you, this app cannot function.</string>
    <string name="give_consent">Change Consent</string>
    <string name="menu_openinbrowser">Open in Browser</string>
    <string name="drawer_schedule">Schedule</string>
    <string name="drawer_timeline">Timeline</string>
    <string name="drawer_list_of_parties">List of Parties</string>
    <string name="drawer_wiki">Wiki</string>
    <string name="drawer_laws">List of Laws</string>

</resources>
